--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "cli_tools",
+  "name": "devstat",
   "version": "1.0.0",
+  "description": "CLI tool to fetch coding stats from GitHub, LeetCode, and Codeforces",
   "main": "index.js",
+  "bin": {
+    "devstat": "./index.js"
+  },
+  "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["cli", "github", "leetcode", "codeforces", "devstat"],
+  "author": "Hitanshu",
   "license": "ISC",
-  "description": "",
-  "type": "module",
   "dependencies": {
     "axios": "^1.10.0",
     "boxen": "^8.0.0",
