--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
-  "keywords": ["cli", "github", "leetcode", "codeforces", "devstat"],
+  "keywords": [
+    "cli",
+    "github",
+    "leetcode",
+    "codeforces",
+    "devstat"
+  ],
   "author": "Hitanshu",
   "license": "ISC",
   "dependencies": {
@@ -18,11 +24,13 @@
     "boxen": "^8.0.0",
     "chalk": "^5.4.1",
     "chalk-animation": "^2.0.3",
+    "cli-progress": "^3.12.0",
     "commander": "^14.0.0",
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "inquirer": "^12.7.0",
-    "nanospinner": "^1.2.2"
+    "nanospinner": "^1.2.2",
+    "terminal-kit": "^3.1.2"
   },
   "devDependencies": {
     "jest": "^30.0.4"
